@@ -7,7 +7,14 @@ import java.util.List;
  * 堆内存溢出异常测试
  *
  * -Xms最小堆容量 -Xmx最大堆容量 dump内存堆转储快照
- * VM Args: -Xms20m -Xmx20m -XX:+HeapDumpOnOutOfMemoryError
+ * VM Args:
+ * -Xms20m -Xmx20m
+ * -XX:+HeapDumpOnOutOfMemoryError
+ * -XX:+PrintGCDetails
+ * -XX:+PrintGCTimeStamps
+ * -XX:+PrintGCApplicationStoppedTime
+ * -XX:+PrintGCApplicationConcurrentTime
+ * -XX:+PrintHeapAtGC
  *
  * 异常信息：java.lang.OutOfMemoryError: Java heap space
  */
@@ -18,7 +25,7 @@ public class HeapOOM {
         while(true){
             list.add(new OOMObject());
 
-            Thread.sleep(1000);
+//            Thread.sleep(1000);
         }
     }
 
